# python-demo-app

./: README.md  pyproject.toml
