[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = ""
authors = ["Derek Baker <derek.baker89@gmail.com>"]
readme = "README.md"
packages = [{include = "demo_app"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
